<resources>
    <string name="app_name">MilkDoser</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="todo">TODO</string>
    <string name="kanal_modu">Kanal Modu</string>
    <string name="mono">MONO</string>
    <string name="duo">DUO</string>
    <string name="adresler">Adresler</string>
    <string name="sati">SATIŞ:</string>
    <string name="servis">SERViS:</string>
    <string name="hatalar">Hatalar</string>
    <string name="milkmasterpiece">MILKMASTERPIECE</string>
    <string name="g_nl_k_t_ketilen_litre_say_s">Günlük Tüketilen Litre Sayısı</string>
    <string name="makine_modeli">Makine Modeli</string>
    <string name="g_nl_k_program_say_s">Günlük Program Sayısı</string>
    <string name="makine_seri_no">Makine Seri No</string>
    <string name="makine_bilgileri">Makine Bilgileri</string>
    <string name="kanal_a_toplam_i_lem">Kanal-A Toplam işlem</string>
    <string name="toplam_lem">Toplam İşlem</string>
    <string name="kanal_b_toplam_s_t_miktar">Kanal-B Toplam Süt Miktarı</string>
    <string name="kanal_a_toplam_s_t_miktar">Kanal-A Toplam Süt Miktarı</string>
    <string name="kanal_b_toplam_i_lem">Kanal-B Toplam işlem</string>
    <string name="pompa_parametreleri">Pompa Parametreleri</string>
    <string name="kanal_a_verimi">Kanal - A Verimi</string>
    <string name="kanal_b_verimi">Kanal - B Verimi</string>
    <string name="maksimum_doz">Maksimum doz:</string>
    <string name="l_len_de_er">Ölçülen değer:</string>
    <string name="kanal_a_kalibrasyon">Kanal-A Kalibrasyon</string>
    <string name="kanal_b_kalibrasyon">Kanal-B Kalibrasyon</string>
    <string name="kalibrasyon_dozu">Kalibrasyon Dozu</string>
    <string name="hatti_doldur">HATTI DOLDUR</string>
    <string name="operasyon_m_d_r_men_s">Operasyon Müdürü Menüsü</string>
    <string name="pompa_havas">Pompa Havası</string>
    <string name="uyku_modu">Uyku Modu</string>
    <string name="durulama">Durulama</string>
    <string name="y_kama">Yıkama</string>
    <string name="ba_lat">BAŞLAT</string>
    <string name="milk_masterpiece_iyi_g_nler_diler">Milk Masterpiece iyi günler diler</string>
    <string name="ho_geld_n_z">HOŞGELDİNİZ!</string>
    <string name="durulama_s_ras_nda_npompalar_al_s_n">Durulama sırasında pompalar çalışsın</string>
    <string name="parametereler">Parametereler</string>
    <string name="saya_lar">Sayaçlar</string>
    <string name="dil">Dil</string>
    <string name="servis_men_s">Servis Menüsü</string>
    <string name="tarih_saat">Tarih/Saat</string>
    <string name="makine_kullan_m_verileri">Makine Kullanım Verileri</string>
    <string name="ekran_parlakl">Ekran Parlaklığı</string>
    <string name="dil_se_ene_i">Dil Seçeneği</string>
    <string name="ayarlanan_parametreler_kaydedildi">Ayarlanan parametreler kaydedildi</string>
    <string name="varsayılan_parametreler_kaydedildi">Varsayılan parametreler kaydedildi</string>
    <string name="hijyen_gunluğu_sifirlandi">Hijyen günlüğü sıfırlandı</string>
    <string name="icin_ara_durulama_yapildi"> için ara durulama yapıldı.</string>
    <string name="icin_ara_durulama_ertelendi"> için ara durulama ertelendi.</string>
    <string name="icin_yikama_yapildi"> için yıkama yapıldı.</string>
    <string name="kanal">Kanal-</string>
    <string name="sayaclar_sifirlandi">Sayaçlar sıfırlandı</string>
    <string name="yikama_islemi">"Yıkama işlemi "</string>
    <string name="durulamanin_bitmesine">"Durulamanın bitmesine "</string>
    <string name="saniye_kaldi">" saniye kaldı..."</string>
    <string name="makine_bilgileri_sifirlandi">Makine bilgileri sıfırlandı</string>
    <string name="OTA_servisi_acildi">OTA Servisi Açıldı</string>
    <string name="OTA_servisi_kapatildi">OTA Servisi Kapatıldı</string>
    <string name="time_set" />
    <string name="cancel" />
</resources>
