<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:keepScreenOn="true">

    <ImageView
        android:id="@+id/milkmaster"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@null"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toTopOf="@+id/guideline122"
        app:layout_constraintEnd_toStartOf="@+id/guideline152"
        app:layout_constraintStart_toStartOf="@+id/guideline151"
        app:layout_constraintTop_toTopOf="@+id/guideline120"
        app:srcCompat="@drawable/milkmaster" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gothic"
        android:text="@string/ba_lat"
        android:textColor="#FFFFFF"
        android:textSize="46sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline207"
        app:layout_constraintEnd_toStartOf="@+id/guideline49"
        app:layout_constraintStart_toStartOf="@+id/guideline37"
        app:layout_constraintTop_toTopOf="@+id/guideline163" />

    <ImageButton
        android:id="@+id/poweron_button"
        android:layout_width="0dp"
        android:layout_height="149dp"
        android:background="@null"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toTopOf="@+id/guideline163"
        app:layout_constraintEnd_toStartOf="@+id/guideline49"
        app:layout_constraintStart_toStartOf="@+id/guideline37"
        app:layout_constraintTop_toTopOf="@+id/guideline196"
        app:srcCompat="@drawable/power_on" />

    <com.menar.milkdoserhmi.CircleProgressBar
        android:id="@+id/custom_progressBar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline210"
        app:layout_constraintEnd_toStartOf="@+id/guideline209"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="@+id/guideline208"
        app:layout_constraintTop_toTopOf="@+id/guideline211"
        app:layout_constraintVertical_bias="1.0"
        app:progress="0"
        app:progressBarThickness="5dp" />

    <TextView
        android:id="@+id/reception_text"
        android:layout_width="544dp"
        android:layout_height="72dp"
        android:fontFamily="@font/gothic"
        android:text="@string/milk_masterpiece_iyi_g_nler_diler"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="32sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/guideline163"
        app:layout_constraintEnd_toStartOf="@+id/guideline152"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="@+id/guideline151"
        app:layout_constraintTop_toBottomOf="@+id/reception_text2"
        app:layout_constraintVertical_bias="0.289"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/reception_text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ho_geld_n_z"
        android:textColor="#FFFFFF"
        android:textSize="47sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline152"
        app:layout_constraintStart_toStartOf="@+id/guideline151"
        app:layout_constraintTop_toTopOf="@+id/guideline196"
        tools:visibility="visible" />

    <ImageButton
        android:id="@+id/sleep_screen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/black_screen" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline116"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.81" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline49"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.58" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline152"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.695" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline163"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.63" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline122"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.14" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline119"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.93" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline151"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.305" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline120"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline37"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.42" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline196"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.38" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline207"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.71" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline208"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.45" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline209"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.55" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline210"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline211"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.73" />

</androidx.constraintlayout.widget.ConstraintLayout>